@@ -1,3 +1,8 @@
+2019-11-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* chkdvifont.c: Add -v option for more verbosity.
+	For now, only the parameter table of TFM/OFM is dumped.
+
 2019-08-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* chkdvifont.c: Show FONTDIR of OFM format.
